<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_camera"
        android:icon="@mipmap/ic_action_camera"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_topdf"
        android:icon="@mipmap/ic_picture_as_pdf_white"
        android:title="@string/topdf"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_gallery"
        android:title="@string/gallery"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rename"
        android:title="@string/rename"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_choose"
        android:title="@string/choose"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        app:showAsAction="never" />
</menu>