<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_action_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_rename"
        android:title="@string/rename"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_combine"
        android:title="@string/combine"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tutor"
        android:title="@string/tutor"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about_us"
        android:title="@string/about_us"
        app:showAsAction="never" />
</menu>